<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2015 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_reset_webview"
          android:title="@string/menu_reset_webview"/>
    <item android:id="@+id/menu_clear_cache"
          android:title="@string/menu_clear_cache"/>
    <item android:id="@+id/menu_enable_tracing"
          android:checkable="true"
          android:title="@string/menu_enable_tracing"/>
    <item android:id="@+id/menu_print"
          android:title="@string/menu_print"/>
    <item android:id="@+id/start_animation_activity"
          android:title="@string/menu_start_animation_activity"/>
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"/>
</menu>
